--- a/Music Player/Info.plist
+++ b/Music Player/Info.plist
@@ -26,6 +26,8 @@
 	<array>
 		<string>audio</string>
 	</array>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
