+ Adding artist song info on lock screen media centre - play pause next previous features activated + Resume feature added if user exits from app in middle of a song playing upon next launch of app it will resume where it was left of.

--- a/Music Player/list.plist
+++ b/Music Player/list.plist
@@ -12,5 +12,15 @@
 		<key>albumArtwork</key>
 		<string>sample artwork</string>
 	</dict>
+	<dict>
+		<key>artistName</key>
+		<string>Inna</string>
+		<key>albumName</key>
+		<string>Album</string>
+		<key>songName</key>
+		<string>Un Momento</string>
+		<key>albumArtwork</key>
+		<string>sample artwork</string>
+	</dict>
 </array>
 </plist>
